--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write ."
+    "lint:fix": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "jest": "^30.2.0",
     "prettier": "^3.7.4"
   }
 }
