--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "jest": "^30.2.0",
     "prettier": "^3.7.4"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
