adiciona comandos ` dev ` e `docker`

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,12 @@
   "description": "Jogo em que você escala um time com jogadores reais da nba e disputa com seus amigos o melhor time",
   "main": "index.js",
   "scripts": {
+    "dev": "node server.js",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "docker": "docker compose -f ./infra/compose.yaml up -d"
   },
   "author": "",
   "license": "MIT",
