--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "description": "Jogo em que você escala um time com jogadores reais da nba e disputa com seus amigos o melhor time",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "npm run services:up && node server.js",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "docker": "docker compose -f ./src/infra/compose.yaml up -d"
+    "services:up": "docker compose -f ./src/infra/compose.yaml up -d",
+    "services:down": "docker compose -f ./src/infra/compose.yaml down",
+    "services:stop": "docker compose -f ./src/infra/compose.yaml stop"
   },
   "author": "",
   "license": "MIT",
