--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "test:watch": "jest --watchAll",
     "services:up": "docker compose -f ./src/infra/compose.yaml up -d",
     "services:down": "docker compose -f ./src/infra/compose.yaml down",
-    "services:stop": "docker compose -f ./src/infra/compose.yaml stop"
+    "services:stop": "docker compose -f ./src/infra/compose.yaml stop",
+    "migration:create": "node-pg-migrate -m ./src/infra/migrations create",
+    "migration:up": "node-pg-migrate -m ./src/infra/migrations --envPath .env.development up"
   },
   "author": "",
   "license": "MIT",
@@ -22,6 +24,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "node-pg-migrate": "^8.0.4",
     "pg": "^8.16.3"
   }
 }
